# IdiomMatcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: IdiomMatcher.json
eval/: Eval.sh  Eval.swift  IdiomMatcher_arm.json  IdiomMatcher_mips.json  IdiomMatcher_ppc.json  IdiomMatcher_x86.json  Match.sh  Readme.md  dumpAll.sh  dumpJSON.idc
src/IDA/: AddMissingSwitchPatterns.cpp  AddMissingSwitchPatterns.h  CMakeLists.txt  IDAAdapter.cpp  IDAAdapter.h  IDAUIActions.cpp  IDAUIActions.h  StringSwitchSearch.cpp  StringSwitchSearch.h  UIHooks.cpp  UIHooks.h  plugin.cpp
src/Matching/: CMakeLists.txt  DisassemblerAPI.cpp  DisassemblerAPI.h  MatchPersistence.cpp  MatchPersistence.h
src/Matching/Graph/: CFGBuilder.cpp  CFGBuilder.h  Graph.cpp  Graph.h  PDGTransform.cpp  PDGTransform.h
src/Matching/Matcher/: ControlFlowGraphMatching.cpp  ControlFlowGraphMatching.h  DependenceGraphMatching.cpp  DependenceGraphMatching.h  Matching.cpp  Matching.h  NaiveMatching.cpp  NaiveMatching.h
src/Model/: CMakeLists.txt  DisassemblyPersistence.cpp  DisassemblyPersistence.h  Logging.cpp  Logging.h  Pattern.cpp  Pattern.h  PatternPersistence.cpp  PatternPersistence.h
src/Standalone/: CMakeLists.txt  DumpDisassemblerAPI.cpp  DumpDisassemblerAPI.h  IdiomMatcherStandalone.cpp  IdiomMatcherStandalone.h  main.cpp
test/MatchingTest/: CMakeLists.txt  MatchingTest.cpp
test/ModelTest/: CMakeLists.txt  PatternTest.cpp
